# eidos

./: Cargo.toml  design.md  language.md  todo.md
resources/: npcs.yaml  objects.yaml  word_grid.yaml
resources/dialog/: intro.yaml
resources/places/: magician_house.yaml
src/: cad.rs  color.rs  conduit.rs  controls.rs  dialog.rs  error.rs  field.rs  function.rs  game.rs  image.rs  lib.rs  main.rs  main_menu.rs  math.rs  new_game.rs  npc.rs  object.rs  person.rs  physics.rs  player.rs  plot.rs  runtime.rs  stack.rs  sva.rs  texture.rs  utils.rs  value.rs  word.rs  world.rs
